docs(auth-routes): add swagger docs for auth routes
